cmake_minimum_required(VERSION 4.1)
project(PRACTICAS_POO)

set(CMAKE_CXX_STANDARD 20)

add_executable(PRACTICAS_POO main.cpp
        Temazo.cpp
        Temazo.h
        garito.cpp
        garito.h
        djutils.cpp
        djutils.h
        fecha.cpp
        fecha.h
        ParametroNoValido.cpp
        ParametroNoValido.h
)
